add research content

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,13 @@
 /* ==========================================================================
    BASE ELEMENTS
    ========================================================================== */
+   .collapse {
+    display: none;
+    &.show {
+      display: block;
+    }
+  }
+
 html {
   /* sticky footer fix */
   position: relative;
