--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,6 +12,7 @@
   {% assign title = post.title %}
 {% endif %}
 
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -26,6 +27,7 @@
       </div>
     {% endif %}
 
+    <!---
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
@@ -33,14 +35,14 @@
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
-    
+
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif post.collection == 'publications' %}
+        {% elsif post.collection == 'research' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
@@ -57,8 +59,32 @@
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
-      <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
+      <p><a href=" {{ post.paperurl }} "><u>Published version</u></a></p>
     {% endif %}
+    -->
+
+    <h2 class="archive__item-title" itemprop="headline">
+      {{ post.title }}
+    </h2> 
+    <p> 
+    {{ post.month }}
+    {%- if post.coauthor %}
+      (with {{ post.coauthor }})
+    {%- endif %}.
+    <i>{{ post.venue }}.</i>
+    </p>
+    <a data-toggle="collapse" data-target="#{{ post.identifier }}"  class="btn" role="button">Abstract</a>
+    {%- if post.paperurl %}
+            <a href="{{ post.paperurl }}" class="btn" role="button">Published version</a>
+    {%- endif %}
+    {%- if post.arxiv %}
+            <a href="http://arxiv.org/abs/{{ post.arxiv }}" class="btn" role="button">arXiv</a>
+    {%- endif %}
+    <div class="collapse" id="{{ post.identifier }}">
+      <p>{{post.abstract}}</p>
+    </div>
+    
+
 
   </article>
 </div>
