--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -6,11 +6,39 @@
    Default button
    ========================================================================== */
 
+   .btn-abstract {
+    display: inline-block;
+    margin-bottom: 0.25em;
+    padding: 0.1em 0.25em;
+    color: $link-color;
+    font-family: $sans-serif;
+    font-size: $type-size-6;
+    text-align: center;
+    text-decoration: none !important;
+    border: 1px solid;
+    border-color: $link-color;
+    border-radius: $border-radius;
+    cursor: pointer;
+  
+    &:hover {
+      color: #fff;
+      background-color: $link-color !important;
+    }
+
+  .icon {
+    margin-right: 0.5em;
+  }
+
+  .icon + .hidden {
+    margin-left: -0.5em; /* override for hidden text*/
+  }
+  }
+
 .btn {
   /* default button */
-  display: inline-block;
+  /*display: inline-block;
   margin-bottom: 0.25em;
-  padding: 0.5em 1em;
+  padding: 0.125em 0.25em;
   color: #fff !important;
   font-family: $sans-serif;
   font-size: $type-size-6;
@@ -25,6 +53,25 @@
   &:hover {
     background-color: mix(white, #000, 20%);
   }
+  */
+
+  display: inline-block;
+    margin-bottom: 0.25em;
+    padding: 0.1em 0.25em;
+    color: $link-color;
+    font-family: $sans-serif;
+    font-size: $type-size-6;
+    text-align: center;
+    text-decoration: none !important;
+    border: 1px solid;
+    border-color: $link-color;
+    border-radius: $border-radius;
+    cursor: pointer;
+  
+    &:hover {
+      color: #fff;
+      background-color: $link-color !important;
+    }
 
   .icon {
     margin-right: 0.5em;
@@ -149,5 +196,23 @@
 
   &--small {
     font-size: $type-size-7;
+  }
+
+  &--research {
+    display: inline-block;
+    margin-bottom: 0.25em;
+    padding: 0.125em 0.25em;
+    color: $link-color;
+    text-align: center;
+    text-decoration: none !important;
+    border: 1px solid;
+    border-color: $link-color;
+    border-radius: $border-radius;
+    cursor: pointer;
+  
+    &:hover {
+      color: #fff;
+      background-color: $link-color !important;
+    }
   }
 }
