--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -19,8 +19,9 @@
     {% if author.bio %}<p class="author__bio">{{ author.bio }}</p>{% endif %}
   </div>
 
+
   <div class="author__urls-wrapper">
-    <button class="btn btn--inverse">Follow</button>
+    <!--<button class="btn btn--inverse">Follow</button> -->
     <ul class="author__urls social-icons">
       {% if author.location %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
@@ -120,4 +121,5 @@
 {% endif %}
     </ul>
   </div>
+
 </div>
